Add index, provide initial sidebar

--- a/Rules
+++ b/Rules
@@ -16,7 +16,7 @@ compile '/**/*.md' do
  layout '/default.*'
 
  if item.identifier =~ '**/index.*'
-   write item.identifier.to_s
+   write item.identifier.without_ext + '.html'
  else
    write item.identifier.without_ext + '/index.html'
  end
