--- a/Rules
+++ b/Rules
@@ -19,7 +19,7 @@ end
 
 compile '/**/*.md' do
  filter :kramdown
- filter :colorize_syntax
+ filter :colorize_syntax, default_colorizer: :rouge
  layout '/default.*'
 
  if item.identifier =~ '**/index.*'
