--- a/Rules
+++ b/Rules
@@ -17,6 +17,15 @@ compile '/blog.md' do
  write item.identifier.without_ext + '/index.html'
 end
 
+compile '/(at|beta).md' do
+ filter :kramdown
+ layout '/glia_layout.*'
+
+ puts "item: #{item[:glia_url]}"
+
+ write item.identifier.without_ext + '/index.html'
+end
+
 compile '/**/*.md' do
  filter :kramdown
  filter :colorize_syntax, default_colorizer: :rouge
